adding metrics example

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "phantomas": "~0.12.1",
     "swig": "~1.2.2",
     "co": "~3.0.2",
-    "thunkify": "0.0.1"
+    "thunkify": "0.0.1",
+    "lodash": "~2.4.1"
   }
 }
