--- a/package.json
+++ b/package.json
@@ -9,23 +9,22 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "co": "~3.0.2",
     "co-body": "0.0.1",
     "co-monk": "0.0.1",
     "co-views": "~0.1.0",
     "grunt": "~0.4.2",
-    "grunt-phantomas": "~0.5.1",
     "koa": "~0.1.2",
     "koa-error": "~1.1.1",
-    "koa-static": "~1.4.2",
+    "koa-passport": "~0.1.0",
     "koa-router": "~3.0.0",
+    "koa-sess": "0.0.8",
+    "koa-static": "~1.4.2",
+    "lodash": "~2.4.1",
     "monk": "~0.7.1",
+    "passport-local": "~0.1.6",
     "phantomas": "~0.12.1",
     "swig": "~1.2.2",
-    "co": "~3.0.2",
-    "thunkify": "0.0.1",
-    "lodash": "~2.4.1",
-    "koa-passport": "~0.1.0",
-    "passport-local": "~0.1.6",
-    "koa-sess": "0.0.8"
+    "thunkify": "0.0.1"
   }
 }
