--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "co": "~3.0.2",
     "co-body": "0.0.1",
     "co-monk": "0.0.1",
-    "co-views": "~0.1.0",
     "grunt": "~0.4.2",
     "koa": "~0.1.2",
     "koa-error": "~1.1.1",
@@ -20,6 +19,7 @@
     "koa-router": "~3.0.0",
     "koa-sess": "0.0.8",
     "koa-static": "~1.4.2",
+    "koa-views": "~1.2.0",
     "lodash": "~2.4.1",
     "monk": "~0.7.1",
     "passport-local": "~0.1.6",
